Fix: testing svh to fix overflow on mobile.

--- a/style/styles.css
+++ b/style/styles.css
@@ -22,6 +22,10 @@
     --offwhite: #dbcfb7; /* #ebe8e2 */
     background-color: var(--offwhite);
 }
+body {
+    height: 100vh;
+    height: 100svh;
+}
 .parent { 
     display: grid; 
     grid-template-columns: repeat(5, 1fr); 
